<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.estatexplore5.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.estatexplore5.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.estatexplore5.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/filterFragment"
        android:name="com.example.estatexplore5.ui.FilterFragment"
        android:label="FilterFragment" >
        <action
            android:id="@+id/action_filterFragment_to_propertiesFragment"
            app:destination="@id/propertiesFragment" />
    </fragment>
    <fragment
        android:id="@+id/propertiesFragment"
        android:name="com.example.estatexplore5.PropertiesFragment"
        android:label="PropertiesFragment" />
    <action
        android:id="@+id/action_propertiesFragment_to_filterFragment"
        app:destination="@id/filterFragment" />

</navigation>